crates/nash-codegen/src/snapshots/nash_codegen__decision_tree__tests__big_list_tail_binding_is_only_reconstructed_when_used@ignored.snap
---
source: crates/nash-codegen/src/decision_tree_tests.rs
description: "let match#1 : List Int = (con data (List [I 1, I 2])) in\ncase@List unListData match#1 of\n  Nil -> error\n  Cons field#2 listTail#4 -> 42"
---
--- unoptimized Core
let match#1 : List Int = (con data (List [I 1, I 2])) in
case@List unListData match#1 of
  Nil -> error
  Cons field#2 listTail#4 -> 42
--- unoptimized UPLC
(program 1.1.0
  [(lam match_1
    (case
      [(builtin unListData) match_1]
      (lam field_2 (lam listTail_4 (con integer 42)))
      (error)))
    (con data (List [I 1, I 2]))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
--- budget
cpu: 186033, memory: 1132
