crates/nash-codegen/src/snapshots/nash_codegen__decision_tree__tests__shared_default_leaf.snap
---
source: crates/nash-codegen/src/decision_tree_tests.rs
expression: pretty
---
let match#1 : (bool, bool) = constr 0 false false in
let leaf#4 : 'erased = delay (trace "default" in false) in
case@Tag match#1 of
  0 field#5 field#6 -> case@Bool field#5 of
    False -> force leaf#4
    True -> case@Bool field#6 of
      False -> force leaf#4
      True -> true
